# ensembl-production-imported

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: BlastProtein.md  Common_RunnableDB.md  DNAFeatures.md  EC2Rhea.md  EGGeneric.md  ExonerateAlignment.md  FindPHIBaseCandidates.md  Map_interspecies_interactions.md  RNAFeatures.md  RNAGenes.md  RepeatModeler.md  SRAAlignment_BRC4.md  WGA2GenesDirect.md  Xref.md  Xref_GPR.md
docs/auto/: SRAAlignment_BRC4.md
lib/perl/Bio/EnsEMBL/Analysis/Config/: General.pm
lib/perl/Bio/EnsEMBL/Analysis/Runnable/: BlastEG.pm  CMScan.pm  DustMasker.pm  tRNAscan.pm
lib/perl/Bio/EnsEMBL/EGPipeline/: PrivateConfDetails.pm
lib/perl/Bio/EnsEMBL/EGPipeline/BRC4Aligner/: AggregateMetadata.pm  AlignSequence.pm  BamStats.pm  Base.pm  CalculateTPM.pm  CleanupBam.pm  ConvertSpace.pm  CreateBedGraph.pm  CreateBigWig.pm  DatasetFactory.pm  DatasetSpeciesFactory.pm  ExtractJunction.pm  FastqSubset.pm  GFF3_to_bed.pm  GTF_to_featurelength.pm  GenesCheck.pm  HtseqCountName.pm  HtseqFactory.pm  InferStrandness.pm  MergeFactory.pm  MergeFastq.pm  MetadataCheck.pm  OrderBam.pm  PrepareFastq.pm  PrepareGenome.pm  ReadMetadata.pm  RunFactory.pm  SRASeqFile.pm  SRASeqFileFromNCBI.pm  SamToBam.pm  SampleFactory.pm  SequenceLengths.pm  SplitReadStrand.pm  Trim.pm  (+9 more)
lib/python/: __init__.py
lib/python/ensembl/: __init__.py
lib/python/ensembl/microbes/: __init__.py
lib/python/ensembl/microbes/auxiliary_files/: REST-API_code.py
lib/python/ensembl/pipeline/json/: schema_validator.py
scripts/assembly_release_tracking/: Ensembl_MainRelease_Tracker  Ensembl_MainRelease_Tracker.sh  GetTaxonomy.pl  default_meta_query.sql  plants_meta_query.sql
scripts/brc4/: brc4_formatter.pl  brc4_species.pl  check_stable_ids.py  delete_genes.pl  get_rnaseq_from_redmine.py  json_samples_to_redmine_samples.py  remove_pseudogenic_CDS.pl  repeat_for_masker.pl  repeat_tab_to_list.pl  rnaseq_summary.pl  show_registry_species.pm  transfer_versions.pl  update_database_release.pl
scripts/misc_scripts/: GenerateExampleGenes.sh  add_karyotype.pl  gene_stable_id_mapping.pl  get_trans.pl  load_karyotype_from_gff.pl  load_xref.pl  remove_entities.pl
scripts/phi_ontology/: ontologies_conditions.pl  ontologies_phenotypes.pl  phi-base_ontologies.pl
scripts/rna_features/: add_rfam_desc.pl  taxonomic_levels.pl
scripts/uniparc_index/: create_uniparc_dbm.py  query_uniparc_dbm.py
scripts/utility/: Bulk_CoreDB_Copy  Bulk_CoreDB_Copy.sh  Bulk_CoreDB_Handover_Beta  Bulk_CoreDB_Handover_Beta.sh
scripts/xrefs_pipeline/: gaf_loader.pl  load_plasmogem.pl  load_sgd_gene_names.pl  make_EGs_xref_db.pl
(+213 files in other folders)
